# pixel_engine

./: CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt
lib/include/: pixeng.h
lib/source/: pixeng.cpp
samples/base/: CMakeLists.txt
samples/base/source/: main.cpp
samples/cellular_automata/: CMakeLists.txt
samples/cellular_automata/source/: main.cpp
samples/snake/: CMakeLists.txt
samples/snake/source/: main.cpp
